RESOLVED FIXED 51293
WebKit does not build with worker but without the javascript debugger
https://bugs.webkit.org/show_bug.cgi?id=51293
Summary WebKit does not build with worker but without the javascript debugger
Benjamin Poulain
Reported 2010-12-18 12:51:57 PST
The patch https://bugs.webkit.org/show_bug.cgi?id=51025 refactor Inspector.idl in a way that functions related to workers are not generated if ENABLE_JAVASCRIPT_DEBUGGER is not defined. This does not compile because InspectorController guards the build with ENABLE(WORKERS).
Attachments
Patch (1.10 KB, patch)
2010-12-18 13:21 PST, Benjamin Poulain
kenneth: review+
commit-queue: commit-queue-
Patch (1.32 KB, patch)
2010-12-18 15:04 PST, Benjamin Poulain
kenneth: review+
commit-queue: commit-queue-
Patch, with changelog :) (2.02 KB, patch)
2010-12-19 07:20 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-12-18 13:21:36 PST
Created attachment 76941 [details] Patch To fix the build, I could have modified the idl to move the two functions outside of ENABLE_JAVASCRIPT_DEBUGGER, like they were before #51025. Instead I added guards in InspectorController. Those two functions are in the context of the Debugger, so the change of #51025 make sense in my opinion, and we can remove the calls to those methods.
WebKit Commit Bot
Comment 2 2010-12-18 14:21:50 PST
Comment on attachment 76941 [details] Patch Rejecting attachment 76941 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-attachment', '--non-interactive', 76941]" exit_code: 2 Last 500 characters of output: -apply', u'--reviewer', u'Kenneth Rohde Christiansen', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/inspector/InspectorController.h Hunk #1 FAILED at 398. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/inspector/InspectorController.h.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kenneth Rohde Christiansen', u'--force']" exit_code: 1 Full output: http://queues.webkit.org/results/7209044
Benjamin Poulain
Comment 3 2010-12-18 15:04:01 PST
Created attachment 76944 [details] Patch Ooops, uploaded the wrong patch. The one you reviewed is already in trunk. Attached is the right one :)
WebKit Commit Bot
Comment 4 2010-12-18 17:01:27 PST
Comment on attachment 76944 [details] Patch Rejecting attachment 76944 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 76944]" exit_code: 2 Last 500 characters of output: pdating working directory Processing patch 76944 from bug 51293. Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See: http://webkit.org/coding/contributing.html Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See: http://webkit.org/coding/contributing.html Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See: http://webkit.org/coding/contributing.html Full output: http://queues.webkit.org/results/7268037
Benjamin Poulain
Comment 5 2010-12-19 07:20:57 PST
Created attachment 76956 [details] Patch, with changelog :) I was so eager to get rid of the bug that I forgot the changelog :)
Kenneth Rohde Christiansen
Comment 6 2010-12-19 07:26:40 PST
Comment on attachment 76956 [details] Patch, with changelog :) and I was looking at the code only as you always do good ChangeLogs :-)
WebKit Commit Bot
Comment 7 2010-12-19 07:56:16 PST
The commit-queue encountered the following flaky tests while processing attachment 76956 [details]: http/tests/media/video-load-twice.html bug 51304 (authors: eric.carlson@apple.com and hclam@google.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2010-12-19 07:57:27 PST
Comment on attachment 76956 [details] Patch, with changelog :) Clearing flags on attachment: 76956 Committed r74323: <http://trac.webkit.org/changeset/74323>
Eric Seidel (no email)
Comment 9 2010-12-20 23:05:25 PST
Please obsolete old patches when uploading new ones. webkit-patch upload will do this (and much more!) automatically for you.
Note You need to log in before you can comment on or make changes to this bug.