2010-12-19  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        WebKit does not build with worker but without the javascript debugger
        https://bugs.webkit.org/show_bug.cgi?id=51293

        Add missing guard for calls depending on the debugger.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::populateScriptObjects):
        (WebCore::InspectorController::postWorkerNotificationToFrontend):

Canonical link: https://commits.webkit.org/64665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74323 268f45cc-cd09-0410-ab3c-d52691b4dbfc